# wraith

./: .gitignore  .gitmodules  .travis.yml  BSDmakefile  CNAME  CONTRIBUTING.md  COPYRIGHT  CREDITS  Changelog  FEATURES.md  LICENSE  Makefile  Makefile.in  README  README.md  README.txt  acconfig.h  aclocal.m4  bldall  bldleaf  build  build.sh  conf  config.h.in  configure  configure.in  contbld  default.conf  defines.txt  disabled_modules  fixmakefile.awk  fixmakefile2.awk  fstrings  ind  makesalt.c  maketype  pack.conf  pack.txt  test
_includes/: footer.html  header.html
_layouts/: default.html  packconfig.html  packconfig_v28.html
autotools/: Makefile  README  aclocal.m4  config.h.template  configure.ac
autotools/includes/: acinclude.m4  depend.m4  dns.m4  libtcl.m4  pack.m4  wrap.m4
doc/: CHANGES  COPYRIGHTS  CREDITS  GPL  INSTALL  README  UPDATES  UPDATES.md  UPDATING  UPGRADING  conf.example  help.txt  responses.txt  settings.txt
docs/: README.md
docs/_includes/: PackConfig.conf  PackConfig_v28.conf
docs/mirror.shatow.net/wraith/: auth.html
docs/mirror.shatow.net/wraith/scripts/: irssi.tgz
docs/wraith.botpack.net/wiki/: PackConfig.txt  PackConfig_version_28.txt
lib/: Makefile.in
lib/libelf/: aclocal.m4  configure
lib/libelf/lib/: Makefile.w32  config.h.w32  update.c
lib/libelf/lib/libelf/: byteswap.h  elf_repl.h  errors.h  ext_types.h  gelf.h  libelf.h  nlist.h  private.h  sys_elf.h  verdef.h  verneed.h
md5/: md5.h  md5c.c  mddriver.c  t
mirror.shatow.net/wraith/: md5.tgz
mirror.shatow.net/wraith/scripts/: BitchX.tgz
misc/: .banners  buildall  buildpack  buildts.php  dostrings  fstrings  getdate.sh  getrev.sh  getts.sh  grep  help.txt  install-sh  maketcl  maketype  modconfig  responses.txt  settings.txt  ts.c  utc-time.c
pack/: conf.h  pack.cfg.sample  settings.c
private/: .gitignore  buildall  buildpack  getdate.sh  getrev.sh  getts.sh  replace_lang.sh
scripts/: telnet.exp
scripts/BitchX/: README  README.BitchX  w.bx  wraith.bx
scripts/irssi/: README.irssi  wraith.pl
scripts/mIRC/: README.mIRC  readme.txt  wraith.mrc
scripts/xchat/: README.xchat  wraith.pl
src/: .gitignore  EncryptedStream.c  EncryptedStream.cc  EncryptedStream.h  Makefile.in  RfcString.cc  RfcString.h  adns.c  adns.cc  adns.h  auth.c  auth.cc  auth.h  base64.c  base64.cc  base64.h  bf_conf_tab.h  bg.c  bg.cc  bg.h  binary.c  binary.cc  binary.h  binds.c  binds.cc  binds.h  bits.h  blowfish_conf.h  botcmd.c  botcmd.cc  botcmd.h  botmsg.c  botmsg.cc  botmsg.h  botnet.c  botnet.cc  botnet.h  buildinfo.h.in  cfg.c  cfg.h  (+178 more)
src/bdlib/: Makefile.in  base64.c  base64.h  bdlib.h
src/compat/: .gitignore  Makefile.in  compat.h  dirname.c  dirname.h  dn_expand.c  dn_expand.h  gnu_strftime.c  inet_aton.c  inet_aton.h  inet_ntop.c  inet_ntop.h  makepath.c  makepath.h  memcpy.c  memcpy.h  memmem.c  memset.c  memset.h  memutil.c  memutil.h  openssl.cc  snprintf.c  snprintf.h  strcasecmp.c  strcasecmp.h  strftime.c  strftime.h  strlcpy.c  strlcpy.h  strsep.c  strsep.h  timespec.h
src/crypto/: .gitignore  Makefile.in  aes.c  aes.h  aes_util.c  aes_util.cc  aes_util.h  bf_util.c  bf_util.cc  bf_util.h  cleanse.c  cleanse.h  crypto.h  dh_util.c  dh_util.cc  dh_util.h  md32_common.h  md5.c  md5.h  md5_locl.h  sha.c  sha.h  sha_locl.h
src/md5/: Makefile.in  global.h  md5.h  md5c.c
src/mod/: .gitignore  Makefile.in  eggautoconf  eggmod.m4  eggmod.sh  mod.mk.in  module.h  modvals.h  static.h
src/mod/blowfish.mod/: Makefile  bf_tab.h  blowfish.c  blowfish.h
src/mod/channels.mod/: Makefile  chanmisc.c  chanmisc.cc  channels.c  channels.cc  channels.h  cmdschan.c  cmdschan.cc  tclchan.c  udefchan.c  userchan.c  userchan.cc
src/mod/compress.mod/: Makefile  Makefile.in  compress.c  compress.cc  compress.h  configure.in  tclcompress.c
src/mod/console.mod/: Makefile  console.c  console.cc  console.h
src/mod/ctcp.mod/: Makefile  ctcp.c  ctcp.cc  ctcp.h
src/mod/dns.mod/: Makefile.in  configure  configure.in  coredns.c  dns.c  dns.h
src/mod/irc.mod/: Makefile  chan.c  chan.cc  cmdsirc.c  cmdsirc.cc  irc.c  irc.cc  irc.h  mode.c  mode.cc  msgcmds.c  msgcmds.cc  tclirc.c
src/mod/notes.mod/: Makefile  cmdsnote.c  notes.c  notes.h
src/mod/server.mod/: Makefile  cmdsserv.c  cmdsserv.cc  server.c  server.cc  server.h  servmsg.c  servmsg.cc  tclserv.c
src/mod/share.mod/: Makefile  share.c  share.cc  share.h  uf_features.c
src/mod/transfer.mod/: .gitignore  Makefile  transfer.c  transfer.cc  transfer.h
src/mod/update.mod/: Makefile  update.c  update.cc  update.h
wraith.botpack.net/wiki/: PackConfig.html  PackConfig_version_28.html
